<resources>
    <string name="app_name">Calculator</string>
    <string name="keyboard_7">7</string>
    <string name="keyboard_8">8</string>
    <string name="keyboard_9">9</string>
    <string name="keyboard_4">4</string>
    <string name="keyboard_5">5</string>
    <string name="keyboard_6">6</string>
    <string name="keyboard_1">1</string>
    <string name="keyboard_2">2</string>
    <string name="keyboard_3">3</string>
    <string name="keyboard_0">0</string>
    <string name="keyboard_dot">.</string>
    <string name="keyboard_equal">=</string>
    <string name="keyboard_del">DEL</string>
    <string name="keyboard_add">+</string>
    <string name="keyboard_sub">-</string>
    <string name="keyboard_mul">x</string>
    <string name="keyboard_div">/</string>

</resources>
