<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.jettlee.calculator.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:text="Hello World!"
        android:id="@+id/monitor"
        android:textColor="@color/monitor_text"
        android:textSize="@dimen/monitor_textsize"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/keyboard_7"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/keyboard_height"
        android:background="@color/number_background"
        android:textColor="@color/number_text"
        android:textSize="@dimen/number_textsize"
        android:id="@+id/keyboard_7"
        android:layout_below="@+id/monitor"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/keyboard_8"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/keyboard_height"
        android:background="@color/number_background"
        android:textColor="@color/number_text"
        android:textSize="@dimen/number_textsize"
        android:layout_below="@+id/monitor"
        android:layout_toRightOf="@+id/keyboard_7"
        android:layout_toEndOf="@+id/keyboard_7"
        android:id="@+id/keyboard_8" />

    <Button
        android:text="@string/keyboard_9"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/keyboard_height"
        android:background="@color/number_background"
        android:textColor="@color/number_text"
        android:textSize="@dimen/number_textsize"
        android:layout_below="@+id/monitor"
        android:layout_toRightOf="@+id/keyboard_8"
        android:layout_toEndOf="@+id/keyboard_8"
        android:id="@+id/keyboard_9" />

    <Button
        android:text="@string/keyboard_4"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/keyboard_height"
        android:background="@color/number_background"
        android:textColor="@color/number_text"
        android:textSize="@dimen/number_textsize"
        android:layout_below="@+id/keyboard_7"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/keyboard_4" />

    <Button
        android:text="@string/keyboard_5"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/keyboard_height"
        android:background="@color/number_background"
        android:textColor="@color/number_text"
        android:textSize="@dimen/number_textsize"
        android:layout_alignTop="@+id/keyboard_4"
        android:layout_toRightOf="@+id/keyboard_4"
        android:layout_toEndOf="@+id/keyboard_4"
        android:id="@+id/keyboard_5" />

    <Button
        android:text="@string/keyboard_6"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/keyboard_height"
        android:background="@color/number_background"
        android:textColor="@color/number_text"
        android:textSize="@dimen/number_textsize"
        android:layout_alignTop="@+id/keyboard_5"
        android:layout_toRightOf="@+id/keyboard_5"
        android:layout_toEndOf="@+id/keyboard_5"
        android:id="@+id/keyboard_6" />

    <Button
        android:text="@string/keyboard_1"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/keyboard_height"
        android:background="@color/number_background"
        android:textColor="@color/number_text"
        android:textSize="@dimen/number_textsize"
        android:layout_below="@+id/keyboard_4"
        android:layout_toLeftOf="@+id/keyboard_5"
        android:layout_toStartOf="@+id/keyboard_5"
        android:id="@+id/keyboard_1" />

    <Button
        android:text="@string/keyboard_2"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/keyboard_height"
        android:background="@color/number_background"
        android:textColor="@color/number_text"
        android:textSize="@dimen/number_textsize"
        android:layout_below="@id/keyboard_5"
        android:layout_toLeftOf="@+id/keyboard_6"
        android:layout_toStartOf="@+id/keyboard_6"
        android:id="@+id/keyboard_2" />

    <Button
        android:text="@string/keyboard_3"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/keyboard_height"
        android:background="@color/number_background"
        android:textColor="@color/number_text"
        android:textSize="@dimen/number_textsize"
        android:layout_below="@id/keyboard_6"
        android:layout_toRightOf="@+id/keyboard_8"
        android:layout_toEndOf="@+id/keyboard_8"
        android:id="@+id/keyboard_3" />

    <Button
        android:text="@string/keyboard_dot"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/keyboard_height"
        android:background="@color/number_background"
        android:textColor="@color/number_text"
        android:textSize="@dimen/number_textsize"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/keyboard_1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/keyboard_dot" />

    <Button
        android:text="@string/keyboard_0"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/keyboard_height"
        android:background="@color/number_background"
        android:textColor="@color/number_text"
        android:textSize="@dimen/number_textsize"
        android:layout_alignParentBottom="true"
        android:layout_alignTop="@+id/keyboard_dot"
        android:layout_toRightOf="@+id/keyboard_dot"
        android:layout_toEndOf="@+id/keyboard_dot"
        android:id="@+id/keyboard_0" />

    <Button
        android:text="@string/keyboard_equal"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/keyboard_height"
        android:background="@color/number_background"
        android:textColor="@color/number_text"
        android:textSize="@dimen/number_textsize"
        android:layout_alignParentBottom="true"
        android:layout_alignTop="@+id/keyboard_0"
        android:layout_toRightOf="@+id/keyboard_0"
        android:layout_toEndOf="@+id/keyboard_0"
        android:id="@+id/keyboard_equal" />

    <Button
        android:text="@string/keyboard_del"
        android:layout_width="@dimen/keyboard_action_width"
        android:layout_height="@dimen/keyboard_action_height"
        android:textColor="@color/action_text"
        android:textSize="@dimen/action_textsize"
        android:background="@color/action_background"
        android:id="@+id/keyboard_del"
        android:layout_below="@+id/monitor"
        android:layout_toRightOf="@id/keyboard_9"
        android:layout_toEndOf="@+id/keyboard_9"/>

    <Button
        android:text="@string/keyboard_div"
        android:layout_width="@dimen/keyboard_action_width"
        android:layout_height="@dimen/keyboard_action_height"
        android:background="@color/action_background"
        android:textSize="@dimen/action_textsize"
        android:textColor="@color/action_text"
        android:id="@+id/keyboard_div"
        android:layout_below="@+id/keyboard_del"
        android:layout_toRightOf="@+id/keyboard_6"
        android:layout_toEndOf="@+id/keyboard_6"/>

    <Button
        android:text="@string/keyboard_mul"
        android:layout_width="@dimen/keyboard_action_width"
        android:layout_height="@dimen/keyboard_action_height"
        android:background="@color/action_background"
        android:textSize="@dimen/action_textsize"
        android:textColor="@color/action_text"
        android:id="@+id/keyboard_mul"
        android:layout_below="@+id/keyboard_div"
        android:layout_toRightOf="@+id/keyboard_3"
        android:layout_toEndOf="@+id/keyboard_3"/>

    <Button
        android:text="@string/keyboard_sub"
        android:layout_width="@dimen/keyboard_action_width"
        android:layout_height="@dimen/keyboard_action_height"
        android:background="@color/action_background"
        android:textSize="@dimen/action_textsize"
        android:textColor="@color/action_text"
        android:id="@+id/keyboard_sub"
        android:layout_below="@+id/keyboard_mul"
        android:layout_toRightOf="@+id/keyboard_3"
        android:layout_toEndOf="@+id/keyboard_3"/>

    <Button
        android:text="@string/keyboard_add"
        android:layout_width="@dimen/keyboard_action_width"
        android:layout_height="@dimen/keyboard_action_height"
        android:background="@color/action_background"
        android:textSize="@dimen/action_textsize"
        android:textColor="@color/action_text"
        android:layout_below="@+id/keyboard_sub"
        android:layout_toRightOf="@+id/keyboard_equal"
        android:layout_toEndOf="@+id/keyboard_equal"
        android:id="@+id/keyboard_add" />

    <TextView
        android:layout_width="@dimen/deco"
        android:layout_height="match_parent"
        android:layout_below="@+id/monitor"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/keyboard_div"
        android:layout_toEndOf="@+id/keyboard_div"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:background="@color/decoration_line"
        android:id="@+id/deco" />

</RelativeLayout>
